--- a/public/css/main.css
+++ b/public/css/main.css
@@ -227,107 +227,77 @@ h4, .logo {
   src: url("../fonts/Ludicrous-Stencil.ttf");
 }
 
-.py-3 {
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
+.navbar {
+  width: 100%;
+  z-index: 100;
+  /*-----------image logo----------*/
+  position: fixed;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0);
+  transition: 0.3s linear;
 }
 
-.px-4 {
-  padding-right: 1.5rem !important;
-  padding-left: 1.5rem !important;
+.navbar a.logo {
+  content: url(../images/logoBlue.png);
+  width: 150px;
 }
 
-.px-lg-5 {
-  padding-right: 3rem !important;
-  padding-left: 3rem !important;
+.navbar li a {
+  position: relative;
+  display: block;
+  font-family: Lato, sans-serif;
+  color: #ecf0f1;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s;
+  font-weight: 800;
 }
 
-.ms-auto {
-  margin-left: auto !important;
+.navbar li a::after {
+  position: absolute;
+  content: "";
+  top: 80%;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #1380a1;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: all 0.5s;
 }
 
-.my-2 {
-  margin-top: 0.5rem !important;
-  margin-bottom: 0.5rem !important;
+.navbar li a:hover {
+  color: #1380a1;
 }
 
-.my-lg-0 {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
+.navbar li a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
-#mainNav {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  background-color: #fff;
-  transition: background-color 0.2s ease;
+a.active:not(.logo) {
+  color: #1380a1;
 }
 
-#mainNav .navbar-brand {
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  color: #212529;
+.invisible {
+  top: -50px;
 }
 
-#mainNav .navbar-nav .nav-item .nav-link {
-  color: #6c757d;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  font-size: 0.9rem;
-  padding: 0.75rem 0;
+.scrolled {
+  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #75bfd6 50%);
 }
 
-#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #f4623a;
-}
+/* 
 
-#mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #f4623a !important;
-}
+I will show you how to change a height of a standard Bootstrap navbar.
 
-@media (min-width: 992px) {
-  #mainNav {
-    box-shadow: none;
-    background-color: transparent;
-  }
-  #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  #mainNav .navbar-brand:hover {
-    color: #fff;
-  }
-  #mainNav .navbar-nav .nav-item .nav-link {
-    color: rgba(255, 255, 255, 0.7);
-    padding: 0 1rem;
-  }
-  #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #fff;
-  }
-  #mainNav .navbar-nav .nav-item:last-child .nav-link {
-    padding-right: 0;
-  }
-  #mainNav.navbar-shrink {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f4623a;
-  }
-  #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
-    color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
-    color: #f4623a;
-  }
-}
-
+*/
 .parallax-wrapper {
-  overflow-y: hidden;
   background-image: url("../images/bgprofile.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh;
 }
 
@@ -501,7 +471,7 @@ h4, .logo {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#275b7a",endColorstr="#ffffff",GradientType=1);
   bottom: -10px;
   opacity: 0.3;
-  animation: bubble 15s ease-in-out infinite, sideWays 4s ease-in-out infinite alternate;
+  animation: bubble 15s ease-in-out infinite, sideWays 4s ease-in-out infinite alternate;
 }
 
 @keyframes bubble {
