--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -3,95 +3,100 @@
 	font-family: "Ludicrous-Stencil";
 	src: url('../fonts/Ludicrous-Stencil.ttf') ;
    }
-
-   
-.py-3 {
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
+.navbar { 
+  width: 100%;
+  z-index: 100;
+  /*-----------image logo----------*/
+  
+  a.logo{  
+    content:$logoImg; 
+    width:150px ;
+  }   
+  
+    li {
+        a{
+          position: relative;
+          display: block;
+          font-family: Lato, sans-serif;
+          color: #ecf0f1;
+          text-decoration: none;
+          text-transform: uppercase;
+          transition: 0.5s;
+          font-weight: 800;
+    
+          &::after {
+            position: absolute;
+            content: "";
+            top: 80%;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background-color: $color-profile2;
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: all 0.5s;
+          }
+    
+          &:hover {
+            color: $color-profile2;          
+          }
+    
+          &:hover::after {
+            transform: scaleX(1);
+            transform-origin: left;
+          }
+        }
+      }  
+    position: fixed;    
+    top:0;
+    background-color: rgba(255,255,255,0); // media query
+    -webkit-transition:  0.3s linear; 
+    -moz-transition:  0.3s linear; 
+    -ms-transition:  0.3s linear;    
+    transition: 0.3s linear; 
+    // height: 80px;    
+}
+a.active:not(.logo) {
+    color: $color-profile2;   
+}
+.invisible{
+    top:-50px;   
 }
 
-.px-4 {
-  padding-right: 1.5rem !important;
-  padding-left: 1.5rem !important;
+.scrolled {      
+    background-image: $color-bgNav;     
 }
 
-.px-lg-5 {
-    padding-right: 3rem !important;
-    padding-left: 3rem !important;
-  }
 
-.ms-auto {
-  margin-left: auto !important;
-}
-.my-2 {
-  margin-top: 0.5rem !important;
-  margin-bottom: 0.5rem !important;
-}
+// ____________________
+/* 
 
-.my-lg-0 {
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-  }
+I will show you how to change a height of a standard Bootstrap navbar.
 
+*/
 
-#mainNav {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  background-color: #fff;
-  transition: background-color 0.2s ease;
-}
-#mainNav .navbar-brand {
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  color: #212529;
-}
-#mainNav .navbar-nav .nav-item .nav-link {
-  color: #6c757d;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  font-size: 0.9rem;
-  padding: 0.75rem 0;
-}
-#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #f4623a;
-}
-#mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #f4623a !important;
-}
-@media (min-width: 992px) {
-  #mainNav {
-    box-shadow: none;
-    background-color: transparent;
-  }
-  #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  #mainNav .navbar-brand:hover {
-    color: #fff;
-  }
-  #mainNav .navbar-nav .nav-item .nav-link {
-    color: rgba(255, 255, 255, 0.7);
-    padding: 0 1rem;
-  }
-  #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #fff;
-  }
-  #mainNav .navbar-nav .nav-item:last-child .nav-link {
-    padding-right: 0;
-  }
-  #mainNav.navbar-shrink {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f4623a;
-  }
-  #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
-    color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
-    color: #f4623a;
-  }
-}
+// .navbar {
+//   min-height: 80px;
+// }
+
+// .navbar-brand {
+//   padding: 0 15px;
+//   height: 80px;
+//   line-height: 80px;
+// }
+
+// .navbar-toggle {
+//   /* (80px - button height 34px) / 2 = 23px */
+//   margin-top: 23px;
+//   padding: 9px 10px !important;
+// }
+
+// @media (min-width: 768px) {
+//   .navbar-nav > li > a {
+//     /* (80px - line-height of 27px) / 2 = 26.5px */
+//     padding-top: 26.5px;
+//     padding-bottom: 26.5px;
+//     line-height: 27px;
+//   }
+// }
+
