--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -2,11 +2,14 @@
 
 //parallax for image background profile
 .parallax-wrapper {
-	overflow-y: hidden;
+	// overflow-y: hidden;
 	background-image: url('../images/bgprofile.jpg');
 	background-size: cover;
+	background-repeat: no-repeat;
 	background-position: center;
+	background-attachment: fixed;
 	height: 100vh;
+	// width: 80%;
   }
   
 
