--- a/public/css/main.css
+++ b/public/css/main.css
@@ -370,6 +370,7 @@ a.active:not(.logo) {
 }
 
 /* Animate Background Image */
+
 @keyframes animTitle {
   100% {
     background-position: 0% 50%;
@@ -1006,12 +1007,6 @@ a.active:not(.logo) {
   }
 }
 
-/* ===== Scrollbar CSS ===== */
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 0;
-}
-
 .bubble-ocean {
   display: none;
 }
@@ -1048,28 +1043,6 @@ header, footer {
   main {
     margin: 0px;
   }
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: #1380a1 #ffffff;
-  }
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 16px;
-  }
-  *::-webkit-scrollbar-track {
-    background: #ffffff;
-  }
-  *::-webkit-scrollbar-thumb {
-    background-color: #1380a1;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
-    transition: all .3s  ease-in;
-  }
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #75bfd6;
-  }
   .scrolled {
     height: 60px;
   }
@@ -1094,28 +1067,6 @@ header, footer {
   .bubble-ocean {
     display: block;
   }
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: #1380a1 #ffffff;
-  }
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 16px;
-  }
-  *::-webkit-scrollbar-track {
-    background: #ffffff;
-  }
-  *::-webkit-scrollbar-thumb {
-    background-color: #1380a1;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
-    transition: all .3s  ease-in;
-  }
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #75bfd6;
-  }
   .portfolio #portfolio-menu {
     padding: 2px 15px;
   }
@@ -1127,6 +1078,34 @@ header, footer {
 /*--------------------------------------------------------------
 # scrolbar
 --------------------------------------------------------------*/
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  transition: all 0.3s ease-in;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #1380a1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1380a1;
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #75bfd6;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
