--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -13,32 +13,33 @@
 /*--------------------------------------------------------------
 # scrolbar
 --------------------------------------------------------------*/
-// /* width */
-// ::-webkit-scrollbar {
-//   width: 8px;  
-//   transition: all 0.3s ease-in;
-// }
+/* width */
+::-webkit-scrollbar {
+  width: 8px;  
+  -webkit-transition: all 0.3s ease-in;  
+  transition: all 0.3s ease-in;
+}
 
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px $color-profile2; 
-//   border-radius: 10px;
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px $color-profile2; 
+  border-radius: 10px;
   
-// }
+}
  
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-//   background:  $color-profile2; 
-//   border-radius: 10px;  
-// }
-// html::-webkit-scrollbar{
-//   width:8px;
-//   height:8px;
-// }
-// /* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: $color-profile3; 
-// }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:  $color-profile2; 
+  border-radius: 10px;  
+}
+html::-webkit-scrollbar{
+  width:8px;
+  height:8px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $color-profile3; 
+}
 
 /*--------------------------------------------------------------
 # Back to top button
