--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -27,10 +27,10 @@
     width: 180px;
     position: absolute;
     left: 0;
-    -webkit-animation: pulsate 2s ease-out;
-    animation: pulse 2s ease-out;
+    -webkit-animation: pulse 2s ease-out;
+            animation: pulse 2s ease-out;
     -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
     opacity: 0.0;
     z-index: 30;
 }
@@ -93,8 +93,6 @@
 		
   
   /* Activate hardware acceleration for smoother animations */
-  
-		-webkit-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
@@ -115,6 +113,10 @@
     max-width: 880px;
 }
 /* Animate Background Image */
+@-webkit-keyframes animTitle {
+	100% { background-position: 0% 50%; }
+	0% { background-position: 100% 50%; }
+}
 @keyframes animTitle {
 	100% { background-position: 0% 50%; }
 	0% { background-position: 100% 50%; }
@@ -213,14 +215,24 @@
 
 	position: absolute;
 	background: rgb(39,91,122);
-	background: -moz-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
-	background: -webkit-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
 	background: radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#275b7a",endColorstr="#ffffff",GradientType=1);
 	bottom: -10px;
 	opacity: 0.3;
-	animation: bubble 15s ease-in-out infinite,
+	-webkit-animation: bubble 15s ease-in-out infinite,
 	  sideWays 4s ease-in-out infinite alternate;
+	        animation: bubble 15s ease-in-out infinite,
+	  sideWays 4s ease-in-out infinite alternate;
+  }
+  
+  @-webkit-keyframes bubble {
+	0% {
+	  transform: translateY(0%);
+	  opacity: 0.06;
+	}
+	100% {
+	  transform: translateY(-120vh);
+	}
   }
   
   @keyframes bubble {
@@ -230,6 +242,18 @@
 	}
 	100% {
 	  transform: translateY(-120vh);
+	}
+  }
+  
+  @-webkit-keyframes sideWays {
+	0% {
+	  margin-left: 0px;
+	}
+	50% {
+		margin-left: 3em;
+	  }
+	100% {
+	  margin-left: 1em;
 	}
   }
   
@@ -250,8 +274,10 @@
 	height: 9px;
 	left: 15%;
 	bottom: 30px;
-	animation-delay: 0.5s;
-	animation-duration: 16s;
+	-webkit-animation-delay: 0.5s;
+	        animation-delay: 0.5s;
+	-webkit-animation-duration: 16s;
+	        animation-duration: 16s;
 	opacity: 0.3;
   }
   
@@ -260,8 +286,10 @@
 	height: 15px;
 	left: 40%;
 	bottom: 30px;
-	animation-delay: 1s;
-	animation-duration: 10s;
+	-webkit-animation-delay: 1s;
+	        animation-delay: 1s;
+	-webkit-animation-duration: 10s;
+	        animation-duration: 10s;
 	opacity: 0.1;
   }
   
@@ -270,8 +298,10 @@
 	height: 10px;
 	left: 30%;
 	bottom: 30px;
-	animation-delay: 5s;
-	animation-duration: 20s;
+	-webkit-animation-delay: 5s;
+	        animation-delay: 5s;
+	-webkit-animation-duration: 20s;
+	        animation-duration: 20s;
 	opacity: 0.3;
   }
   
@@ -280,8 +310,10 @@
 	height: 25px;
 	left: 45%;
 	bottom: 30px;
-	animation-delay: 3s;
-	animation-duration: 17s;
+	-webkit-animation-delay: 3s;
+	        animation-delay: 3s;
+	-webkit-animation-duration: 17s;
+	        animation-duration: 17s;
 	opacity: 0.2;
   }
   
@@ -290,8 +322,10 @@
 	height: 10px;
 	left: 60%;
 	bottom: 30px;
-	animation-delay: -10s;
-	animation-duration: 15s;
+	-webkit-animation-delay: -10s;
+	        animation-delay: -10s;
+	-webkit-animation-duration: 15s;
+	        animation-duration: 15s;
 	opacity: 0.1;
   }
   
@@ -300,8 +334,10 @@
 	height: 20px;
 	left: 90%;
 	bottom: 30px;
-	animation-delay: 2s;
-	animation-duration: 30s;
+	-webkit-animation-delay: 2s;
+	        animation-delay: 2s;
+	-webkit-animation-duration: 30s;
+	        animation-duration: 30s;
 	opacity: 0.4;
   }
   
@@ -310,8 +346,10 @@
 	height: 15px;
 	left: 25%;
 	bottom: 30px;
-	animation-delay: -7s;
-	animation-duration: 25s;
+	-webkit-animation-delay: -7s;
+	        animation-delay: -7s;
+	-webkit-animation-duration: 25s;
+	        animation-duration: 25s;
 	opacity: 0.3;
   }
   
@@ -320,8 +358,10 @@
 	height: 30px;
 	left: 38%;
 	bottom: 30px;
-	animation-delay: 2s;
-	animation-duration: 19s;
+	-webkit-animation-delay: 2s;
+	        animation-delay: 2s;
+	-webkit-animation-duration: 19s;
+	        animation-duration: 19s;
 	opacity: 0.2;
   }
   
@@ -330,8 +370,10 @@
 	height: 20px;
 	left: 20%;
 	bottom: 30px;
-	animation-delay: -21s;
-	animation-duration: 16s;
+	-webkit-animation-delay: -21s;
+	        animation-delay: -21s;
+	-webkit-animation-duration: 16s;
+	        animation-duration: 16s;
 	opacity: 0.3;
   }
   
@@ -340,8 +382,10 @@
 	height: 30px;
 	left: 70%;
 	bottom: 30px;
-	animation-delay: -13.75s;
-	animation-duration: 15s;
+	-webkit-animation-delay: -13.75s;
+	        animation-delay: -13.75s;
+	-webkit-animation-duration: 15s;
+	        animation-duration: 15s;
 	opacity: 0.3;
   }
   
@@ -350,7 +394,8 @@
 	height: 5px;
 	left: 95%;
 	bottom: 30px;	
-	animation-duration: 19s;
+	-webkit-animation-duration: 19s;	
+	        animation-duration: 19s;
 	opacity: 0.3;
   }
 
@@ -359,8 +404,10 @@
 	height: 10px;
 	left: 15%;
 	bottom: 30px;
-	animation-delay: -5s;
-	animation-duration: 10s;
+	-webkit-animation-delay: -5s;
+	        animation-delay: -5s;
+	-webkit-animation-duration: 10s;
+	        animation-duration: 10s;
 	opacity: 0.3;
   }
 
@@ -369,8 +416,10 @@
 	height: 9px;
 	left: 18%;
 	bottom: 30px;
-	animation-delay: -9s;
-	animation-duration: 10s;
+	-webkit-animation-delay: -9s;
+	        animation-delay: -9s;
+	-webkit-animation-duration: 10s;
+	        animation-duration: 10s;
 	opacity: 0.4;
   }
 
@@ -379,8 +428,10 @@
 	height: 17px;
 	left: 65%;
 	bottom: 30px;
-	animation-delay: -8s;
-	animation-duration: 12s;
+	-webkit-animation-delay: -8s;
+	        animation-delay: -8s;
+	-webkit-animation-duration: 12s;
+	        animation-duration: 12s;
 	opacity: 0.3;
   }
 
@@ -389,7 +440,9 @@
 	height: 12px;
 	left: 80%;
 	bottom: 30px;
-	animation-delay: -1s;
-	animation-duration: 8s;
+	-webkit-animation-delay: -1s;
+	        animation-delay: -1s;
+	-webkit-animation-duration: 8s;
+	        animation-duration: 8s;
 	opacity: 0.3;
   }
