--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -64,7 +64,12 @@ a.active:not(.logo) {
     top:-50px;   
 }
 
-
+.scrolled {      
+    background-image: $color-bgNav;     
+}
+.collapsehide{
+ display: none;
+}
 
 // ____________________
 
