--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -1,147 +1,153 @@
-    /* -------------- media query for layouts -------------------*/
-    /*header*/
-    
-    .bubble-ocean {
-        display: none;
+/* ===================media query for layouts ==================*/
+
+
+/*header*/
+
+.bubble-ocean {
+    display: none;
+}
+
+
+/* main */
+
+main {
+    margin: 10px;
+}
+
+
+/*portfolio*/
+
+.portfolio #portfolio-menu {
+    li {
+        padding: 10px 15px 8px 15px;
     }
-    /* main */
-    
+    padding: 2px 5px;
+}
+
+@include for-phone-tablet {
+    .navbar.styleNav {
+        border-radius: 0 0 80% / 100% 0;
+        opacity: .9;
+        background-image: $color-bgGradient;
+        background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, $color-2 50%);
+        .logo {
+            margin-left: 25%;
+        }
+    }
+    /*position et spacing des textes links*/
+    .navbar-collapse {
+        .navbar-nav {
+            width: 100%;
+        }
+        .nav-item1 .link1 {
+            margin-left: 82%;
+        }
+        .nav-item2 .link2 {
+            margin-left: 77%;
+        }
+        .nav-item3 .link3 {
+            margin-left: 74%;
+        }
+        .nav-item4 .link4 {
+            margin-left: 58%;
+        }
+        .nav-item5 .link5 {
+            margin-left: 45%;
+        }
+        .nav-item6 .link6 {
+            margin-left: 30%;
+        }
+        .nav-item7 .link7 {
+            margin-left: 22%;
+        }
+        .nav-item {
+            letter-spacing: 1px;
+        }
+    }
+}
+
+@include for-phone {
+    /* header -----------------*/
+    /*margin */
     main {
-        margin: 10px;
+        margin: 0px;
     }
     /*portfolio*/
-    
     .portfolio #portfolio-menu {
         li {
             padding: 10px 15px 8px 15px;
         }
         padding: 2px 5px;
     }
-    
-    @include for-phone-tablet {
-        .navbar.styleNav {
-            border-radius: 0 0 80% / 100% 0;
-            opacity: .9;
-            background-image: $color-bgGradient;
-            background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, $color-2 50%);
-            .logo {
-                margin-left: 25%;
-            }
-        }
-        /*position et spacing des textes links*/
-        .navbar-collapse {
-            .navbar-nav {
-                width: 100%;
-            }
-            .nav-item1 .link1 {
-                margin-left: 82%;
-            }
-            .nav-item2 .link2 {
-                margin-left: 77%;
-            }
-            .nav-item3 .link3 {
-                margin-left: 74%;
-            }
-            .nav-item4 .link4 {
-                margin-left: 58%;
-            }
-            .nav-item5 .link5 {
-                margin-left: 45%;
-            }
-            .nav-item6 .link6 {
-                margin-left: 30%;
-            }
-            .nav-item7 .link7 {
-                margin-left: 22%;
-            }
-            .nav-item {
-                letter-spacing: 1px;
-            }
-        }
+}
+
+@include for-tablet {
+    /*margin */
+    main {
+        margin: 0px;
     }
-    
-    @include for-phone {
-        /* header -----------------*/
-        /*margin */
-        main {
-            margin: 0px;
-        }
-        /*portfolio*/
-        .portfolio #portfolio-menu {
-            li {
-                padding: 10px 15px 8px 15px;
-            }
-            padding: 2px 5px;
-        }
+    /* 2. 1header */
+    /*bubble in header*/
+    .bubble-ocean {
+        display: block;
     }
-    
-    @include for-tablet {
-        /*margin */
-        main {
-            margin: 0px;
+    /*portfolio*/
+    .portfolio #portfolio-menu {
+        li {
+            padding: 10px 15px 8px 15px;
         }
-        /* 2. 1header */
-        /*bubble in header*/
-        .bubble-ocean {
-            display: block;
-        }
-        /*portfolio*/
-        .portfolio #portfolio-menu {
-            li {
-                padding: 10px 15px 8px 15px;
-            }
-            padding: 2px 15px;
-        }
+        padding: 2px 15px;
     }
-    
-    @include for-desktop {
-        /*margin */
-        main {
-            margin: 0px;
-        }
-        /*navbar*/
-        .navbar {
-            li {
-                a {
-                    position: relative;
-                    display: block;
-                    color: $color-1;
-                    text-decoration: none;
-                    text-transform: uppercase;
-                    transition: 0.5s;
-                    font-weight: 800;
-                    &::after {
-                        position: absolute;
-                        content: "";
-                        top: 80%;
-                        left: 0;
-                        width: 100%;
-                        height: 3px;
-                        background-color: $color-1;
-                        transform: scaleX(0);
-                        transform-origin: right;
-                        transition: all 0.5s;
-                    }
-                    &:hover {
-                        color: $color-2;
-                    }
-                    &:hover::after {
-                        transform: scaleX(1);
-                        transform-origin: left;
-                    }
+}
+
+@include for-desktop {
+    /*margin */
+    main {
+        margin: 0px;
+    }
+    /*navbar*/
+    .navbar {
+        li {
+            a {
+                position: relative;
+                display: block;
+                color: $color-1;
+                text-decoration: none;
+                text-transform: uppercase;
+                transition: 0.5s;
+                font-weight: 800;
+                &::after {
+                    position: absolute;
+                    content: "";
+                    top: 80%;
+                    left: 0;
+                    width: 100%;
+                    height: 3px;
+                    background-color: $color-1;
+                    transform: scaleX(0);
+                    transform-origin: right;
+                    transition: all 0.5s;
+                }
+                &:hover {
+                    color: $color-2;
+                }
+                &:hover::after {
+                    transform: scaleX(1);
+                    transform-origin: left;
                 }
             }
         }
-        /* header*/
-        /*profile*/
-        .bubble-ocean {
-            display: block;
-        }
-        /*portfolio*/
-        .portfolio #portfolio-menu {
-            li {
-                padding: 10px 15px 8px 15px;
-            }
-            padding: 2px 15px;
-        }
     }
+    /* header*/
+    /*profile*/
+    .bubble-ocean {
+        display: block;
+    }
+    /*portfolio*/
+    .portfolio #portfolio-menu {
+        li {
+            padding: 10px 15px 8px 15px;
+        }
+        padding: 2px 15px;
+    }
+}
